<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">League</string>
    <string name="kakao_app_key">16b0b8c1c262c22e0e4683d9bc10a398</string>
    <string name="kakao_client_secret">hqA2xUMiZegRzOTL0hFXecbQU5Xfh5UH</string>
    <string name="facebook_app_id">1034377506725144</string>
    <string name="fb_login_protocol_scheme">fb1034377506725144</string>
    <string name="naver_client_id">Hkg6d2gPRRpivP62KoqG</string>
    <string name="naver_client_secret">bO43bNXDaY</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="delete_whole_search_keyword">검색어 전체 삭제</string>
    <string name="input_search_keyword">검색어 입력</string>
    <string name="not_exists_recent_keyword">최근 검색어 내역이 없습니다.</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="tab_home">홈</string>
    <string name="tab_match">매치신청</string>
    <string name="tab_team">팀리스트</string>
    <string name="tab_match_result_ballot">승부예측</string>
    <string name="tab_noti">알림</string>
    <string name="more">더 보기</string>
    <string name="select_local_title">지역 선택</string>
    <string name="select_local_subtitle">중복 선택은 3개까지 가능 합니다.</string>
    <string name="team_stats">%1$s승 %2$s무 %3$s패</string>
    <string name="team_level">%1$s레벨</string>
    <string name="new_joinning_team">신규 가입 팀</string>
    <string name="sort_new_joinning_team">신규 가입 순</string>
    <string name="sort_high_victory">승률 높은 순</string>
    <string name="sort_good_manner">매너 좋은 순</string>
    <string name="sort_high_select_count">조회수 높은 순</string>
    <string name="team_name">팀 명칭</string>
    <string name="team_name_hint">팀 명칭을 입력하세요</string>
    <string name="ave_age">평균 나이</string>
    <string name="select_hint">선택하세요</string>
    <string name="active_ground">활동 구장</string>
    <string name="unofficial_record">비공인 전적</string>
    <string name="record_hint">000</string>
    <string name="match">전</string>
    <string name="input_match">$s 전</string>
    <string name="win">승</string>
    <string name="input_win">$s 승</string>
    <string name="draw">무</string>
    <string name="input_draw">$s 무</string>
    <string name="loss">패</string>
    <string name="input_loss">$s 패</string>
    <string name="uniform_color">유니폼 상의 컬러</string>
    <string name="key_contacts">대표 연락처</string>
    <string name="input_only_number">숫자만 입력해 주세요</string>
    <string name="community">커뮤니티</string>
    <string name="community_hint">밴드, 카페 등의 커뮤니티 주소 입력</string>
    <string name="unofficial">비공인</string>
    <string name="official">공인</string>
    <string name="facebook_login">페이스북 로그인</string>
    <string name="naver_login">네이버 로그인</string>
    <string name="kakao_login">카카오 로그인</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
