<?xml version="1.0" encoding="utf-8"?>
<com.welab.league.widget.FilterLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/dim_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3000000"
        android:visibility="invisible"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        android:background="#FFFFFFFF">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:textColor="#FF000000"
            android:textSize="20dp"
            android:text="@string/select_local_title"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/sub_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:textColor="#FFB5B5B5"
            android:textSize="14dp"
            android:text="@string/select_local_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/title_textview"/>

        <LinearLayout
            android:id="@+id/local_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="30dp"
            android:paddingRight="17dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/sub_title_textview"
            app:layout_constraintBottom_toTopOf="@+id/button_layout">

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            app:layout_constraintTop_toBottomOf="@+id/local_name_container"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="#FF333333"
                android:textSize="15dp"
                android:text="@string/cancel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/ok_button" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="#FF333333"
                android:textSize="15dp"
                android:text="@string/ok"
                app:layout_constraintLeft_toRightOf="@id/cancel_button"
                app:layout_constraintRight_toRightOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</com.welab.league.widget.FilterLayout>
