<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/search_listview">

        <ImageButton
            android:id="@+id/back_imagebutton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ico_back"
            android:scaleType="centerInside"
            android:background="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/search_edittext"
            android:onClick="onClickCancel"
            />

        <EditText
            android:id="@+id/search_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/input_search_keyword"
            android:textColorHint="#FF888888"
            android:textColor="#FF000000"
            android:textSize="16dp"
            app:layout_constraintLeft_toRightOf="@+id/back_imagebutton"
            app:layout_constraintRight_toLeftOf="@+id/delete_imagebutton"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/delete_imagebutton"
            android:layout_width="18dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ico_small_delete"
            android:scaleType="centerInside"
            app:layout_constraintLeft_toRightOf="@+id/search_edittext"
            app:layout_constraintRight_toLeftOf="@+id/search_imagebutton"
            android:visibility="invisible"
            android:background="@null"
            android:onClick="onClickDeleteKeyword"/>

        <ImageButton
            android:id="@+id/search_imagebutton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ico_enable_search"
            android:scaleType="centerInside"
            android:background="@null"
            app:layout_constraintLeft_toRightOf="@+id/delete_imagebutton"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="onClickSearch"/>
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/divider_imageview"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF013FA8"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/divider_imageview"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"/>

    <LinearLayout
        android:id="@+id/search_caution_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="82dp"
        app:layout_constraintTop_toBottomOf="@+id/divider_imageview">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ico_caution"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="#FF888888"
            android:text="@string/not_exists_recent_keyword"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFE4E7E8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_listview">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:textColor="#FF333333"
            android:textSize="14dp"
            android:text="@string/delete_whole_search_keyword"
            android:background="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            android:onClick="onClickDeleteAllSearchKeywords"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#FF333333"
            android:textSize="14dp"
            android:text="@string/cancel"
            android:background="@null"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="onClickCancel"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>