<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CreateTeamActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#FF083279">
        
        <ImageView
            android:id="@+id/emblem_imageview"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="#FFFFFFFF"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/emblem_imageview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginLeft="11dp"
            android:background="#FF43abee"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="44dp"
            android:textColor="#FF666666"
            android:textSize="16dp"
            android:text="@string/team_name"/>

        <EditText
            android:id="@+id/team_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FF000000"
            android:textSize="16dp"
            android:textColorHint="#FFADADAD"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFF4F4F4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginLeft="11dp"
            android:background="#FF43abee"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:textColor="#FF666666"
            android:textSize="16dp"
            android:text="@string/ave_age"/>

        <TextView
            android:id="@+id/ave_age_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFADADAD"
            android:textSize="16dp"
            android:textColorHint="#FFADADAD"
            android:hint="@string/select_hint"
            android:background="@android:color/transparent"/>

        <ImageView
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:src="@drawable/ico_navi_down"
            android:scaleType="fitCenter"
            android:background="@null"/>
    </LinearLayout>
</LinearLayout>